# audio-rot

./: Cargo.toml  README.md  fly.toml
.github/workflows/: gh-pages-deploy.yml
.zed/: settings.json
src/: audio.rs  main.rs  player_component.rs  styles.rs
